--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="logic.js" type="module"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <audio src="rubberDuckSound.mp3" id="duckSound"></audio>
-        <img src="Rubber-Duck.png" alt="" id="duck">
+      <audio src="rubberDuckSound.mp3" id="duckSound"></audio>
+      <img src="Rubber-Duck.png" alt="" id="duck" />
     </header>
     <main>
-        <input type="text" id="newProblem" placeholder="new problem">
+      <h1>The Rubber Duck Method</h1>
+      <h2>
+        The Rubber Duck Method helps you solve problems by explaining them out
+        loud. As you break it down, you’ll often find the solution on your own!
+      </h2>
+      <label for="newProblem"
+        >Type your problem below and let the "duck" help you figure it
+        out!</label
+      >
+      <div id="input-container">
+        <input type="text" id="newProblem" placeholder="new problem" />
         <button id="addButton">New problem</button>
-        <container>
-            <ul id="problemsList">
-                
-            </ul>
-        </container>
+      </div>
+      <container>
+        <ul id="problemsList"></ul>
+      </container>
     </main>
-</body>
+  </body>
 </html>
