user prompt for name

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <audio src="rubberDuckSound.mp3" id="duckSound"></audio>
       <img src="Rubber-Duck.png" alt="" id="duck" />
+      <h3>Quack!</h3>
     </header>
     <main>
       <h1>The Rubber Duck Method</h1>
