--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <header>
-      <audio src="rubberDuckSound.mp3" id="duckSound"></audio>
+      <audio src="duck-toy-sound.mp3" id="duckSound"></audio>
+      <audio src="quack-sound-effect.mp3" id="quackSound"></audio>
+
       <img src="Rubber-Duck.png" alt="" id="duck" />
       <h3>Quack!</h3>
     </header>
