--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         out!</label
       >
       <div id="input-container">
-        <input type="text" id="newProblem" placeholder="new problem" />
-        <button id="addButton">New problem</button>
+        <input type="text" id="newProblem" placeholder="Type your problem" />
+        <button id="addButton">Ask the duck!</button>
       </div>
       <container>
         <ul id="problemsList"></ul>
