new page - form and validation

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
       <audio src="duck-toy-sound.mp3" id="duckSound"></audio>
       <audio src="quack-sound-effect.mp3" id="quackSound"></audio>
-
-      <img src="Rubber-Duck.png" alt="" id="duck" />
-      <h3>Quack!</h3>
+      <div>
+        <img src="Rubber-Duck.png" alt="" id="duck" />
+        <h3>Quack!</h3>
+      </div>
+      <a href="user.html" id="user">User</a>
     </header>
     <main>
       <h1>The Rubber Duck Method</h1>
@@ -27,7 +29,7 @@
       >
       <div id="input-container">
         <input type="text" id="newProblem" placeholder="Type your problem" />
-        <button id="addButton">Ask the duck!</button>
+        <button id="askButton">Ask the duck!</button>
       </div>
       <container>
         <ul id="problemsList"></ul>
