--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="Rubber-Duck.png" alt="" id="duck" />
         <h3>Quack!</h3>
       </div>
-      <a href="user.html" id="user">User</a>
+      <a href="user.html" id="user">Log in</a>
     </header>
     <main>
       <h1>The Rubber Duck Method</h1>
