--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <input type="text" id="newProblem" placeholder="Type your problem" />
         <button id="askButton">Ask the duck!</button>
       </div>
+      <div>or <button id="force">force an answer</button></div>
       <container>
         <ul id="problemsList"></ul>
       </container>
